<resources>
    <string name="app_name">ICONS Character Sheet</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_character_creation">Character Creation</string>
    <string name="title_activity_character_selection">Character Selection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="name_label">Name</string>
    <string name="stamina_label">Stamina</string>
    <string name="determination_label">Determination</string>
    <string name="health_label">Health</string>
    <string name="height_label">Height</string>
    <string name="width_label">Width</string>
    <string name="abilities_label">Abilities</string>
    <string name="powers_label">Powers</string>
    <string name="specialties_label">Specialties</string>
    <string name="notes_label">Notes</string>
    <string name="aspects_label">Aspects</string>
    <string name="qualities_label">Qualities</string>
    <string name="challenges_label">Challenges</string>

    <string name="prowess">Prowess</string>
    <string name="coordination">Coordination</string>
    <string name="strength">Strength</string>
    <string name="intellect">Intellect</string>
    <string name="awareness">Awareness</string>
    <string name="willpower">Willpower</string>

    <string name="specialty_placeholder">Specialty...</string>
    <string name="note_placeholder">Note...</string>
    <string name="quality_placeholder">Quality....</string>
    <string name="challenge_placeholder">Challenge...</string>

    <string name="power_name_placeholder">Name...</string>
    <string name="power_value_placeholder">Value...</string>

    <string name="name_placeholder">Name...</string>
    <string name="health_placeholder">Health...</string>
    <string name="stamina_placeholder">Stamina...</string>
    <string name="determination_placeholder">Determination...</string>

    <string name="prowess_placeholder">Prowess...</string>
    <string name="coordination_placeholder">Coordination...</string>
    <string name="strength_placeholder">Strength...</string>
    <string name="intellect_placeholder">Intellect...</string>
    <string name="awareness_placeholder">Awareness...</string>
    <string name="willpower_placeholder">Willpower...</string>
</resources>
