<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.drewthecoder.iconscharactersheet.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/notesContainer"
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="44dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/name_label"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="37dp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="79dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                tools:layout_editor_absoluteX="265dp"
                tools:layout_editor_absoluteY="37dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stamina_label"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="101dp" />

            <TextView
                android:id="@+id/stamina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:layout_editor_absoluteX="265dp"
                tools:layout_editor_absoluteY="101dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/determination_label"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="214dp" />

            <TextView
                android:id="@+id/determination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:layout_editor_absoluteX="265dp"
                tools:layout_editor_absoluteY="214dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/health_label"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="156dp" />

            <TextView
                android:id="@+id/maximumHealth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:layout_editor_absoluteX="265dp"
                tools:layout_editor_absoluteY="156dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/health_label" />

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:minHeight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/width_label" />

            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:textAlignment="center">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                tools:background="@android:color/black"
                tools:textAlignment="center"
                tools:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
